@@ -1,3 +1,7 @@
+* 2014-10-21 - thorben.betten@open-xchange.com
+
+ - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error
+
 * 2014-10-17 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 34987: Added properties 'com.openexchange.oauth.google.redirectUrl' and 'com.openexchange.oauth.google.productName'
